@@ -62,6 +62,12 @@ void compare_array(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, v
 
                     log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare array.");
 
+                    // The primitive abstraction.
+                    int a = *NUMBER_MINUS_1_INTEGER_MEMORY_MODEL;
+
+                    // Decode primitive abstraction.
+                    decode_primitive_abstraction((void*) &a, p5, p6);
+
                     // The left array, right array.
                     // CAUTION! They HAVE TO BE initialised with p1 and p2,
                     // since an offset is added below.
@@ -72,7 +78,7 @@ void compare_array(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, v
                     int os = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
                     // Determine abstraction (type) size.
-                    determine_size((void*) &os, p5, p6);
+                    determine_size((void*) &os, (void*) &a);
 
                     // Calculate offset.
                     multiply_with_integer((void*) &os, p3, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
@@ -101,7 +107,7 @@ void compare_array(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, v
 
                         // CAUTION! This function does not change the result flag, if unequal.
                         // Therefore, the result flag always has to be initialised with zero before!
-                        compare_value_offset((void*) &vr, l, r, (void*) &j, p5, p6, p7, p8);
+                        compare_value_offset((void*) &vr, l, r, (void*) &j, (void*) &a, p7, p8);
 
                         if (vr == *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
