@@ -11,9 +11,8 @@
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * Continue in "executor/comparator/" | NEW_array_comparator.c | compare_array
-            determine abstraction as int value (within a new function?) and
-            forward it to following functions
+        * Continue in "executor/comparator/" | character_value_comparator.c
+            determine operation abstraction and add corresponding functions
 
         * Continue in "allocate"
         * Continue in "executor/arithmetiser/fraction*"
